# arch-nemesis

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  mypy.ini  pyproject.toml  shell.nix
arch_nemesis/: __init__.py  app.py  github.py  processor.py  py.typed  schema.py  utils.py
arch_nemesis/sources/: __init__.py  github_asset.py  source.py
tests/: test_module.py
